--- a/README
+++ b/README
@@ -2,7 +2,7 @@ alavue: Open Secure Distributed Remote Backup
 
 This is a two part project:
 
-1) Secure distributed remote file store: alavie.store
+1) Secure distributed remote file store: alavue.store
 	a) The backup script to be run on a schedule with cron or as needed
 	b) Encrypt and split all files individually inside a given directory or set of directories
 	c) Store each slice with a different cloud storage provider
