--- a/README
+++ b/README
@@ -19,5 +19,6 @@ Database Structure:
 
 Files:
 column		type		coallation			attributes		comments
+fid			INTEGER											file id, PRIMARY KEY
 path		TINYTEXT	utf8_unicode_ci						full file path including name
 updated		INT								unsigned		millisecond time (since epoch) of last getting checked by alavue
