--- a/README
+++ b/README
@@ -18,7 +18,8 @@ Notes:
 Database Structure:
 
 Files:
-column		type		coallation			attributes		comments
-fid			INTEGER											file id, PRIMARY KEY
-path		TINYTEXT	utf8_unicode_ci						full file path including name
-updated		INT								unsigned		millisecond time (since epoch) of last getting checked by alavue
+column		type		attributes		comments
+fid			INTEGER						file id, PRIMARY KEY
+path		TINYTEXT					full file path including name
+updated		INT			unsigned		millisecond time (since epoch) of last getting checked by alavue
+name		TINYTEXT					name of file as seen in the cloud
